# Utily

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build-all.bat
.github/workflows/: clang.yml  emscripten.yml  gcc.yml  native-build.yml
benchmark/: BenchAsyncFileReader.cpp  BenchFileReader.cpp  BenchSimd.cpp  BenchSplit.cpp  BenchStaticVector.cpp  Main.cpp
example/: CMakeLists.txt
example/src/: example_main.cpp
include/Utily/: AsyncFileReader.hpp  Concepts.hpp  Error.hpp  ErrorHandler.hpp  FileReader.hpp  FileWriter.hpp  InlineArrays.hpp  Reflection.hpp  Result.hpp  Simd.hpp  Simd128.hpp  Simd512.hpp  Split.hpp  StaticVector.hpp  TupleAlgo.hpp  TupleAlgorithms.hpp  TypeErasedVector.hpp  Utily.hpp
resources/: small.txt
src/: AsyncFileReader.cpp  FileReader.cpp  FileWriter.cpp
test/: UnitAsyncFileReader.cpp  UnitFileReader.cpp  UnitFileWriter.cpp  UnitInlineArrays.cpp  UnitReflection.cpp  UnitResult.cpp  UnitSimd.cpp  UnitSplit.cpp  UnitStaticVector.cpp  UnitTypeErasedVector.cpp
